Fix .root-container overflow issue
- Remove the set width and height on .root-container.
- Increase the second row's width to take 6fr units.
- Make each card's height responsive by setting the .cards element's
  grid-template-rows to minmax(280px, 1fr).
- Decrease bottom padding on .main-content.

--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,9 @@
 }
 
 .root-container {
-    width: 100vw;
-    height: 100vh;
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: 1fr 6fr;
 }
 
 .header {
@@ -159,7 +157,7 @@ a {
 }
 
 .main-content {
-    padding: 24px;
+    padding: 24px 24px 15px;
     background-color: rgb(230, 230, 230);
     
     grid-column: 2;
@@ -174,16 +172,10 @@ h2 {
     font-size: 1.2rem;
 }
 
-.projects {
-    display: grid;
-    align-content: start;
-    gap: 12px;
-}
-
 .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: 280px;
+    grid-auto-rows: minmax(280px, 1fr);
     gap: 24px;
 }
 
@@ -244,6 +236,7 @@ h2 {
     border-top: 1px solid lightgray;
 }
 
+.projects,
 .announcements,
 .trending {
     display: grid;
@@ -252,7 +245,7 @@ h2 {
 }
 
 .trending-box {
-    padding: 24px 24px;
+    padding: 0 24px;
     display: grid;
 }
 
